--- a/src/main/resources/assets/modid/lang/en_us.json
+++ b/src/main/resources/assets/modid/lang/en_us.json
@@ -18,5 +18,8 @@
   "rebind_all_the_keys.keybind.intentional_crash" : "Intentional Crash",
   "rebind_all_the_keys.keybind.intentional_crash.button.held" : " (held)",
   "rebind_all_the_keys.keybind.toggle_narrator_override" : "Toggle Narrator (Override)",
-  "rebind_all_the_keys.keybind.toggle_hud" : "Toggle Hud"
+  "rebind_all_the_keys.keybind.toggle_hud" : "Toggle Hud",
+  "rebind_all_the_keys.keybind.toggle_auto_jump" : "Toggle Auto Jump",
+  "rebind_all_the_keys.keybind.toggle_auto_jump.msg.true" : "Enabled Auto Jump",
+  "rebind_all_the_keys.keybind.toggle_auto_jump.msg.false" : "Disabled Auto Jump"
 }
