Added profiler/tps debug bindings and allow double tap sprint to be disabled (and bumped version)

--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -26,5 +26,6 @@
   "rebind_all_the_keys.keybind.hotbar_next_override" : "Hotbar Next (Override)",
   "rebind_all_the_keys.keybind.hotbar_previous_override" : "Hotbar Previous (Override)",
 
-  "options.cmdToCtrl": "Cmd → Ctrl"
+  "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
+  "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
 }
