--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -25,6 +25,7 @@
   "rebind_all_the_keys.keybind.refresh_server_list" : "Refresh Server List",
   "rebind_all_the_keys.keybind.hotbar_next_override" : "Hotbar Next (Override)",
   "rebind_all_the_keys.keybind.hotbar_previous_override" : "Hotbar Previous (Override)",
+  "rebind_all_the_keys.keybind.quick_move" : "Quick Move",
 
   "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
   "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
