Implemented custom quit keybind

--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -26,6 +26,7 @@
   "rebind_all_the_keys.keybind.hotbar_next_override" : "Hotbar Next (Override)",
   "rebind_all_the_keys.keybind.hotbar_previous_override" : "Hotbar Previous (Override)",
   "rebind_all_the_keys.keybind.quick_move" : "Quick Move",
+  "rebind_all_the_keys.keybind.quit" : "Quit/Close Menu",
 
   "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
   "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
