--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -26,6 +26,9 @@
   "rebind_all_the_keys.keybind.hotbar_next_override" : "Hotbar Next (Override)",
   "rebind_all_the_keys.keybind.hotbar_previous_override" : "Hotbar Previous (Override)",
   "rebind_all_the_keys.keybind.quick_move" : "Quick Move",
+  "rebind_all_the_keys.keybind.quit" : "Quit/Close Menu (ESC still work)",
+  "rebind_all_the_keys.keybind.profiler" : "Profiler",
+  "rebind_all_the_keys.keybind.tps" : "TPS Graph",
 
   "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
   "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
