--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -27,7 +27,7 @@
   "rebind_all_the_keys.keybind.hotbar_next_override" : "Hotbar Next (Override)",
   "rebind_all_the_keys.keybind.hotbar_previous_override" : "Hotbar Previous (Override)",
   "rebind_all_the_keys.keybind.quick_move" : "Quick Move",
-  "rebind_all_the_keys.keybind.drop_stack" : "Drop Stack Modifier",
+  "rebind_all_the_keys.keybind.drop_stack_modifier" : "Drop Stack Modifier",
   "rebind_all_the_keys.keybind.quit" : "Quit/Close Menu (ESC still work)",
   "rebind_all_the_keys.keybind.profiler" : "Profiler",
   "rebind_all_the_keys.keybind.tps" : "TPS Graph",
