--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -32,7 +32,7 @@
   "rebind_all_the_keys.keybind.quit" : "Quit/Close Menu (ESC still work)",
   "rebind_all_the_keys.keybind.profiler" : "Graph: Profiler",
   "rebind_all_the_keys.keybind.tps_fps" : "Graph: FPS & TPS",
-  "rebind_all_the_keys.keybind.bandwidth_ping" : "Graph: Bandwidth & Ping",
+  "rebind_all_the_keys.keybind.bandwidth_ping" : "Graph: Packet Size & Ping",
 
   "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
   "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
