--- a/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
+++ b/src/main/resources/assets/rebind_all_the_keys/lang/en_us.json
@@ -35,5 +35,7 @@
   "rebind_all_the_keys.keybind.bandwidth_ping" : "Graph: Packet Size & Ping",
 
   "rebind_all_the_keys.controls.cmdToCtrl": "Cmd → Ctrl",
-  "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint"
+  "rebind_all_the_keys.controls.doubleTapSprint": "Double Tap Sprint",
+  "rebind_all_the_keys.controls.doubleTapFly": "Double Tap Fly",
+  "rebind_all_the_keys.key.persistent": "Persistent"
 }
